Changed the configuration to be read from json instead of being done manually in the constructors of PLCServer and PLCStation

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="StationConfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="Config\ClientSimulationConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\StationConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
