--- a/MES.Data/MES.Data.csproj
+++ b/MES.Data/MES.Data.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\MES.Common.csproj" />
+  </ItemGroup>
+
 </Project>
