Removed hard codes paths

--- a/Common/MES.Common.csproj
+++ b/Common/MES.Common.csproj
@@ -10,6 +10,9 @@
     <None Update="Config\ClientSimulationConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Config\DatabaseConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Config\StationConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
